Test/git-issues/git-issue-1005.dfy.expect
git-issue-1005.dfy(11,8): Error: wrong number of arguments (datatype constructor 'S1' expects 1, got 0)
git-issue-1005.dfy(12,8): Error: wrong number of arguments (datatype constructor 'S2' expects 2, got 0)
git-issue-1005.dfy(13,8): Error: wrong number of arguments (datatype constructor 'S3' expects 3, got 0)
git-issue-1005.dfy(18,8): Error: wrong number of arguments (datatype constructor 'S1' expects 1, got 0)
git-issue-1005.dfy(19,8): Error: wrong number of arguments (datatype constructor 'S2' expects 2, got 0)
git-issue-1005.dfy(20,8): Error: wrong number of arguments (datatype constructor 'S3' expects 3, got 0)
git-issue-1005.dfy(24,8): Error: wrong number of arguments (datatype constructor 'S0' expects 0, got 1)
git-issue-1005.dfy(26,8): Error: wrong number of arguments (datatype constructor 'S2' expects 2, got 1)
git-issue-1005.dfy(27,8): Error: wrong number of arguments (datatype constructor 'S3' expects 3, got 1)
git-issue-1005.dfy(31,8): Error: wrong number of arguments (datatype constructor 'S0' expects 0, got 4)
git-issue-1005.dfy(32,8): Error: wrong number of arguments (datatype constructor 'S1' expects 1, got 4)
git-issue-1005.dfy(33,8): Error: wrong number of arguments (datatype constructor 'S2' expects 2, got 4)
git-issue-1005.dfy(34,8): Error: wrong number of arguments (datatype constructor 'S3' expects 3, got 4)
git-issue-1005.dfy(44,8): Error: wrong number of arguments (datatype constructor 'C1' expects 1, got 0)
git-issue-1005.dfy(45,8): Error: wrong number of arguments (datatype constructor 'C2' expects 2, got 0)
git-issue-1005.dfy(46,8): Error: wrong number of arguments (datatype constructor 'C3' expects 3, got 0)
git-issue-1005.dfy(51,8): Error: wrong number of arguments (datatype constructor 'C1' expects 1, got 0)
git-issue-1005.dfy(52,8): Error: wrong number of arguments (datatype constructor 'C2' expects 2, got 0)
git-issue-1005.dfy(53,8): Error: wrong number of arguments (datatype constructor 'C3' expects 3, got 0)
git-issue-1005.dfy(57,8): Error: wrong number of arguments (datatype constructor 'C0' expects 0, got 1)
git-issue-1005.dfy(59,8): Error: wrong number of arguments (datatype constructor 'C2' expects 2, got 1)
git-issue-1005.dfy(60,8): Error: wrong number of arguments (datatype constructor 'C3' expects 3, got 1)
git-issue-1005.dfy(64,8): Error: wrong number of arguments (datatype constructor 'C0' expects 0, got 4)
git-issue-1005.dfy(65,8): Error: wrong number of arguments (datatype constructor 'C1' expects 1, got 4)
git-issue-1005.dfy(66,8): Error: wrong number of arguments (datatype constructor 'C2' expects 2, got 4)
git-issue-1005.dfy(67,8): Error: wrong number of arguments (datatype constructor 'C3' expects 3, got 4)
git-issue-1005.dfy(71,11): Error: unresolved identifier: R5
27 resolution/type errors detected in git-issue-1005.dfy
